Crash When Selecting Materials Tab #76949

Closed
opened 2020-05-21 22:37:14 +02:00 by ronsn · 8 comments

System Information
Operating system: Linux-5.3.0-51-generic-x86_64-with-debian-buster-sid 64 Bits
Graphics card: GeForce GTX 1660 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 435.21

Blender Version
Broken: version: 2.90 (sub 2), branch: master, commit date: 2020-05-21 17:37, hash: 70c483e7db
Worked: version: 2.90 (sub 2), branch: master, commit date: 2020-05-21 16:35, hash: ce74df6248

Short description of error
Selecting the materials tab in the right properties window crashes Blender.
Also selecting Materials in the drop down menu in the shader workspace makes Blender crash.

Bisecting gave me:
c732edbaa415b8adda86fbe7302dc5bed3ed66b9 is the first bad commit is the first bad commit

Exact steps for others to reproduce the error

  1. Open Blender
  2. Click in the 3D Viewport to make the splash screen disappear
  3. Try selecting the Materials Tab in the right properties window.

––––––––––––––

Have a nice day 🙂

**System Information** Operating system: Linux-5.3.0-51-generic-x86_64-with-debian-buster-sid 64 Bits Graphics card: GeForce GTX 1660 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 435.21 **Blender Version** Broken: version: 2.90 (sub 2), branch: master, commit date: 2020-05-21 17:37, hash: `70c483e7db` Worked: version: 2.90 (sub 2), branch: master, commit date: 2020-05-21 16:35, hash: `ce74df6248` **Short description of error** Selecting the materials tab in the right properties window crashes Blender. Also selecting Materials in the drop down menu in the shader workspace makes Blender crash. Bisecting gave me: [c732edbaa415b8adda86fbe7302dc5bed3ed66b9 is the first bad commit ](https://developer.blender.org/rBc732edbaa415b8adda86fbe7302dc5bed3ed66b9) is the first bad commit **Exact steps for others to reproduce the error** 1. Open Blender 2. Click in the 3D Viewport to make the splash screen disappear 3. Try selecting the Materials Tab in the right properties window. –––––––––––––– Have a nice day 🙂
Author

Added subscriber: @ronsn

Added subscriber: @ronsn
Author

Added subscriber: @mont29

Added subscriber: @mont29
Author

@mont29 would you take a look at this issue, since c732edbaa4 is your commit?

@mont29 would you take a look at this issue, since c732edbaa4 is your commit?
Bastien Montagne self-assigned this 2020-05-21 23:18:56 +02:00

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

Looks like a stupid typo, thanks.

Looks like a stupid typo, thanks.

This issue was referenced by 8f21f867e7

This issue was referenced by 8f21f867e7159b9c1bfb9fd72d2ebae14c7f4742

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Author

@mont29 Thanks! Now it works 🙂

@mont29 Thanks! Now it works 🙂
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#76949
No description provided.