Fix T76949: Crash When Selecting Materials Tab.

Dummy typo in own recent libquery refactor, of course that one missed
change was on a line not covered by our tests or the production file
used for validation...